--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1><%=titulo%></h1>
-    
+    <p>Você fez <%=i%> acessos e o último em <%=acesso%></p>
 </body>
 </html>
